--- a/requirements.txt
+++ b/requirements.txt
@@ -1,148 +1,2 @@
-absl-py==1.4.0
-annotated-types==0.6.0
-anyio==3.7.1
-asgiref==3.5.2
-astunparse==1.6.3
-beautifulsoup4==4.12.2
-bleach==5.0.1
-blinker==1.6.2
-cachetools==5.3.1
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==2.1.1
-click==8.1.3
-colorama==0.4.6
-contourpy==1.1.0
-cryptography==38.0.4
-cssutils==2.6.0
-cycler==0.11.0
-Cython==3.0.2
-defusedxml==0.7.1
-Django==4.1.3
-django-allauth==0.51.0
-django-appconf==1.0.5
-django-browser-reload==1.8.0
-django-inlinecss==0.3.0
-django-summernote==0.8.20.0
-django-tailwind==3.5.0
-easyocr==1.7.0
-fastapi==0.104.1
-filelock==3.12.3
-fire==0.5.0
-Flask==2.3.2
-Flask-Cors==4.0.0
-flatbuffers==23.5.26
-fonttools==4.42.1
-fsspec==2023.9.0
-future==0.18.3
-gast==0.4.0
-ghp-import==2.1.0
-google-auth==2.23.0
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-grpcio==1.58.0
-h5py==3.9.0
-huggingface-hub==0.16.4
-idna==3.4
-imageio==2.31.3
-itsdangerous==2.1.2
-Jinja2==3.1.2
-joblib==1.3.2
-keras==2.13.1
-kiwisolver==1.4.5
-lazy_loader==0.3
-libclang==16.0.6
-lxml==4.9.3
-Markdown==3.3.7
-MarkupSafe==2.1.2
-matplotlib==3.7.2
-mergedeep==1.3.4
-mkdocs==1.4.2
-mkdocs-material==9.0.11
-mkdocs-material-extensions==1.1.1
-mpmath==1.3.0
-mysqlclient==2.1.1
-networkx==3.1
-ninja==1.11.1
-nltk==3.8.1
-numpy==1.26.0
-oauthlib==3.2.2
-opencv-python==4.8.0.76
-opencv-python-headless==4.8.0.76
-opt-einsum==3.3.0
-packaging==23.0
-pandas==2.0.0
-Pillow==9.5.0
-protobuf==4.24.3
-psutil==5.9.5
-py-cpuinfo==9.0.0
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pyclipper==1.3.0.post4
-pycparser==2.21
-pydantic==2.5.2
-pydantic_core==2.14.5
-Pygments==2.14.0
-PyJWT==2.6.0
-pymdown-extensions==9.9.2
-PyMySQL==1.0.3
-pynliner==0.8.0
-pyparsing==3.0.9
-PyQt6==6.5.2
-PyQt6-Qt6==6.5.2
-PyQt6-sip==13.5.2
-python-bidi==0.4.2
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python3-openid==3.2.0
-pytz==2023.3
-PyWavelets==1.4.1
-PyYAML==6.0
-pyyaml_env_tag==0.1
-randomname==0.2.1
-rcssmin==1.1.1
-regex==2022.10.31
-requests==2.28.1
-requests-oauthlib==1.3.1
-rjsmin==1.2.1
-rsa==4.9
-safetensors==0.3.3
-scikit-image==0.21.0
-scikit-learn==1.3.0
-scipy==1.11.2
-seaborn==0.12.2
-sentence-transformers==2.2.2
-sentencepiece==0.1.99
-shapely==2.0.1
-six==1.16.0
-sniffio==1.3.0
-soupsieve==2.4.1
-sqlparse==0.4.3
-starlette==0.27.0
-supervision==0.9.0
-sympy==1.12
-tensorboard==2.13.0
-tensorboard-data-server==0.7.1
-tensorflow==2.13.0
-tensorflow-estimator==2.13.0
-tensorflow-macos==2.13.0
-termcolor==2.3.0
-threadpoolctl==3.2.0
-tifffile==2023.8.30
-tokenizers==0.13.3
-torch==2.0.1
-torchvision==0.15.2
-tqdm==4.66.1
-transformers==4.32.1
-typing_extensions==4.8.0
-tzdata==2023.3
-ultralytics==8.0.170
-urllib3==1.26.13
-watchdog==2.2.1
-webencodings==0.5.1
-Werkzeug==2.3.6
-wrapt==1.15.0
-
-## custom
-
 fastapi
+python == 3.8
