--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,113 @@
-annotated-types @ file:///C:/b/abs_0dmaoyhhj3/croot/annotated-types_1709542968311/work
-anyio @ file:///C:/b/abs_847uobe7ea/croot/anyio_1706220224037/work
-exceptiongroup @ file:///C:/b/abs_c5h1o1_b5b/croot/exceptiongroup_1706031441653/work
-fastapi @ file:///C:/b/abs_17bc_xka63/croot/fastapi_1693295449860/work
-idna @ file:///C:/b/abs_bdhbebrioa/croot/idna_1666125572046/work
-pydantic @ file:///C:/b/abs_f6ffn86wjx/croot/pydantic_1709578044014/work
-pydantic_core @ file:///C:/b/abs_05smrkbwjm/croot/pydantic-core_1709574000211/work
-sniffio @ file:///C:/b/abs_3akdewudo_/croot/sniffio_1705431337396/work
-starlette @ file:///C:/b/abs_f6jqjvlnz0/croot/starlette-recipe_1692980584602/work
-typing_extensions @ file:///C:/b/abs_72cdotwc_6/croot/typing_extensions_1705599364138/work
+annotated-types==0.6.0
+anyio==4.2.0
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asttokens==2.0.5
+async-lru==2.0.4
+attrs==23.1.0
+Babel==2.11.0
+backcall==0.2.0
+beautifulsoup4==4.12.2
+bleach==4.1.0
+Brotli==1.0.9
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==2.0.4
+colorama==0.4.6
+comm==0.2.1
+debugpy==1.6.7
+decorator==5.1.1
+defusedxml==0.7.1
+exceptiongroup==1.2.0
+executing==0.8.3
+fastapi==0.103.0
+fastjsonschema==2.16.2
+idna==3.4
+importlib-metadata==7.0.1
+importlib-resources==6.1.1
+ipykernel==6.28.0
+ipython==8.12.2
+ipywidgets==8.1.2
+jedi==0.18.1
+Jinja2==3.1.3
+json5==0.9.6
+jsonschema==4.19.2
+jsonschema-specifications==2023.7.1
+jupyter==1.0.0
+jupyter_client==8.6.0
+jupyter-console==6.6.3
+jupyter_core==5.5.0
+jupyter-events==0.8.0
+jupyter-lsp==2.2.0
+jupyter_server==2.10.0
+jupyter_server_terminals==0.4.4
+jupyterlab==4.0.11
+jupyterlab-pygments==0.1.2
+jupyterlab_server==2.25.1
+jupyterlab-widgets==3.0.10
+MarkupSafe==2.1.3
+matplotlib-inline==0.1.6
+mistune==2.0.4
+nbclient==0.8.0
+nbconvert==7.10.0
+nbformat==5.9.2
+nest-asyncio==1.6.0
+notebook==7.0.8
+notebook_shim==0.2.3
+overrides==7.4.0
+packaging==23.2
+pandocfilters==1.5.0
+parso==0.8.3
+pickleshare==0.7.5
+pip==23.3.1
+pkgutil_resolve_name==1.3.10
+platformdirs==3.10.0
+ply==3.11
+prometheus-client==0.14.1
+prompt-toolkit==3.0.43
+psutil==5.9.0
+pure-eval==0.2.2
+pycparser==2.21
+pydantic==2.5.3
+pydantic_core==2.14.6
+Pygments==2.15.1
+PyQt5==5.15.10
+PyQt5-sip==12.13.0
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-json-logger==2.0.7
+pytz==2023.3.post1
+pywin32==305.1
+pywinpty==2.0.10
+PyYAML==6.0.1
+pyzmq==25.1.2
+qtconsole==5.5.1
+QtPy==2.4.1
+referencing==0.30.2
+requests==2.31.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.10.6
+selenium==3.141.0
+Send2Trash==1.8.2
+setuptools==68.2.2
+sip==6.7.12
+six==1.16.0
+sniffio==1.3.0
+soupsieve==2.5
+stack-data==0.2.0
+starlette==0.27.0
+terminado==0.17.1
+tinycss2==1.2.1
+tomli==2.0.1
+tornado==6.3.3
+traitlets==5.7.1
+typing_extensions==4.9.0
+urllib3==2.0.3
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==0.58.0
+wheel==0.41.2
+widgetsnbextension==4.0.10
+win-inet-pton==1.1.0
+zipp==3.17.0
