--- a/requirements.txt
+++ b/requirements.txt
@@ -92,6 +92,7 @@ requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.10.6
+schedule==1.2.1
 selenium==4.19.0
 Send2Trash==1.8.2
 setuptools==68.2.2
