--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,36 @@
 annotated-types==0.6.0
 anyio==4.2.0
 Brotli==1.0.9
+certifi==2024.2.2
+charset-normalizer==3.3.2
+exceptiongroup==1.2.0
 fastapi==0.103.0
+filelock==3.13.4
+fsspec==2024.3.1
 idna==3.4
-pip==23.3.1
+Jinja2==3.1.3
+llvmlite==0.42.0
+MarkupSafe==2.1.5
+more-itertools==10.2.0
+mpmath==1.3.0
+networkx==3.2.1
+numba==0.59.1
+numpy==1.26.4
+openai-whisper==20231117
+PyAudio==0.2.14
 pydantic==2.5.3
 pydantic_core==2.14.6
 PySocks==1.7.1
+regex==2023.12.25
+requests==2.31.0
 selenium==3.141.0
-setuptools==68.2.2
+six==1.16.0
 sniffio==1.3.0
 starlette==0.27.0
+sympy==1.12
+tiktoken==0.6.0
+torch==2.2.2
+tqdm==4.66.2
 typing_extensions==4.9.0
 urllib3==2.0.3
-wheel==0.41.2
 win-inet-pton==1.1.0
