--- a/requirements.txt
+++ b/requirements.txt
@@ -13,21 +13,33 @@ Brotli==1.0.9
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==2.0.4
+click==8.1.7
 colorama==0.4.6
 comm==0.2.1
+contourpy==1.2.0
+cssselect==1.2.0
+cycler==0.11.0
 debugpy==1.6.7
 decorator==5.1.1
 defusedxml==0.7.1
 executing==0.8.3
 fastapi==0.103.0
 fastjsonschema==2.16.2
+feedfinder2==0.0.4
+feedparser==6.0.11
+filelock==3.13.4
+fonttools==4.25.0
+gensim==4.3.0
 h11==0.14.0
 idna==3.4
 ipykernel==6.28.0
 ipython==8.20.0
 ipywidgets==8.1.2
 jedi==0.18.1
+jieba3k==0.35.1
 Jinja2==3.1.3
+joblib==1.4.0
+JPype1==1.5.0
 json5==0.9.6
 jsonschema==4.19.2
 jsonschema-specifications==2023.7.1
@@ -43,16 +55,25 @@ jupyterlab==4.0.11
 jupyterlab-pygments==0.1.2
 jupyterlab_server==2.25.1
 jupyterlab-widgets==3.0.10
+kiwisolver==1.4.4
+konlpy==0.6.0
+lxml==5.2.1
+lxml_html_clean==0.1.1
 MarkupSafe==2.1.3
+matplotlib==3.8.0
 matplotlib-inline==0.1.6
 mistune==2.0.4
 mkl-fft==1.3.8
 mkl-random==1.2.4
 mkl-service==2.4.0
+munkres==1.1.4
 nbclient==0.8.0
 nbconvert==7.10.0
 nbformat==5.9.2
 nest-asyncio==1.6.0
+networkx==3.3
+newspaper3k==0.2.8
+nltk==3.8.1
 notebook==7.0.8
 notebook_shim==0.2.3
 numexpr==2.8.7
@@ -63,6 +84,7 @@ packaging==23.2
 pandas==2.2.1
 pandocfilters==1.5.0
 parso==0.8.3
+pillow==10.2.0
 pip==23.3.1
 platformdirs==3.10.0
 ply==3.11
@@ -74,6 +96,7 @@ pycparser==2.21
 pydantic==2.5.3
 pydantic_core==2.14.6
 Pygments==2.15.1
+pyparsing==3.0.9
 PyQt5==5.15.10
 PyQt5-sip==12.13.0
 PySocks==1.7.1
@@ -88,24 +111,34 @@ pyzmq==25.1.2
 qtconsole==5.5.1
 QtPy==2.4.1
 referencing==0.30.2
+regex==2023.12.25
 requests==2.31.0
+requests-file==2.0.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.10.6
 schedule==1.2.1
+scipy==1.12.0
 selenium==4.19.0
 Send2Trash==1.8.2
 setuptools==68.2.2
+sgmllib3k==1.0.0
 sip==6.7.12
 six==1.16.0
+smart-open==5.2.1
 sniffio==1.3.0
 sortedcontainers==2.4.0
 soupsieve==2.5
 stack-data==0.2.0
 starlette==0.27.0
+summa==1.2.0
 terminado==0.17.1
+textrankr==1.1
 tinycss2==1.2.1
+tinysegmenter==0.3
+tldextract==5.1.2
 tornado==6.3.3
+tqdm==4.66.2
 traitlets==5.7.1
 trio==0.25.0
 trio-websocket==0.11.1
@@ -118,4 +151,5 @@ websocket-client==0.58.0
 wheel==0.41.2
 widgetsnbextension==4.0.10
 win-inet-pton==1.1.0
+wordcloud==1.9.3
 wsproto==1.2.0
